[gd_scene load_steps=20 format=3 uid="uid://8xkxrvpvt640"]

[ext_resource type="Script" uid="uid://hm6busoixidf" path="res://scenes/ui/pause_menu.gd" id="1_41m8q"]

[sub_resource type="LabelSettings" id="LabelSettings_41m8q"]
font_size = 45

[sub_resource type="ShaderMaterial" id="ShaderMaterial_50w55"]

[sub_resource type="Theme" id="Theme_41m8q"]
default_font_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2wnw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mqc0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glyjf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tli7c"]

[sub_resource type="Theme" id="Theme_lv0vc"]
default_font_size = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxiny"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndq7w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_srfwv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_41m8q"]

[sub_resource type="Theme" id="Theme_c2wnw"]
default_font_size = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glyjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tli7c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lv0vc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxiny"]

[sub_resource type="GDScript" id="GDScript_qvaan"]
script/source = "extends Button

func _on_pressed() -> void:
	print(\"you suck\")
"

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_41m8q")

[node name="TextureRect" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -100
custom_minimum_size = Vector2(384, 216)
offset_right = 384.0
offset_bottom = 216.0
mouse_filter = 1
color = Color(0.0509804, 0.0509804, 0.0509804, 0.458824)

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Control" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Control" parent="MenuContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MenuContainer/PauseMenu/VBoxContainer/Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_right = 84.0
offset_bottom = 63.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_41m8q")
horizontal_alignment = 1

[node name="Buttons" type="Control" parent="MenuContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/PauseMenu/VBoxContainer/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Resume" type="Button" parent="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer"]
z_index = -100
material = SubResource("ShaderMaterial_50w55")
layout_mode = 2
theme = SubResource("Theme_41m8q")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c2wnw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4mqc0")
text = "Resume"

[node name="Stats" type="Button" parent="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer"]
z_index = -100
material = SubResource("ShaderMaterial_glyjf")
layout_mode = 2
theme = SubResource("Theme_41m8q")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c2wnw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4mqc0")
text = "Stats"

[node name="Options" type="Button" parent="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer"]
z_index = -100
material = SubResource("ShaderMaterial_tli7c")
layout_mode = 2
theme = SubResource("Theme_lv0vc")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cxiny")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ndq7w")
text = "Options"

[node name="Quit" type="Button" parent="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer"]
z_index = -100
material = SubResource("ShaderMaterial_srfwv")
layout_mode = 2
theme = SubResource("Theme_lv0vc")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cxiny")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ndq7w")
text = "Quit"

[node name="StatsMenu" type="Control" parent="MenuContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenu" type="Control" parent="MenuContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer/OptionsMenu/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Controls" type="Button" parent="MenuContainer/OptionsMenu/HBoxContainer/VBoxContainer"]
z_index = 100
material = SubResource("ShaderMaterial_41m8q")
layout_mode = 2
theme = SubResource("Theme_c2wnw")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_glyjf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tli7c")
text = "Controls
"

[node name="Audio" type="Button" parent="MenuContainer/OptionsMenu/HBoxContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_lv0vc")
layout_mode = 2
theme = SubResource("Theme_c2wnw")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_glyjf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tli7c")
text = "Audio"

[node name="Return" type="Button" parent="MenuContainer/OptionsMenu/HBoxContainer/VBoxContainer"]
z_index = 100
material = SubResource("ShaderMaterial_cxiny")
layout_mode = 2
theme = SubResource("Theme_c2wnw")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_glyjf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tli7c")
text = "Return"

[node name="Controls" type="Control" parent="MenuContainer/OptionsMenu/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Spacing" type="BoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls/VBoxContainer/Spacing"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
theme_override_font_sizes/font_size = 76
text = "Gameplay"
horizontal_alignment = 1

[node name="Control" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls/VBoxContainer/Control"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
text = "Sensitivity"
horizontal_alignment = 1

[node name="Sens" type="HSlider" parent="MenuContainer/OptionsMenu/HBoxContainer/Controls/VBoxContainer/Control"]
layout_mode = 2
min_value = 0.01
max_value = 6.0
step = 0.1
value = 1.01
allow_greater = true
allow_lesser = true

[node name="Audio" type="Control" parent="MenuContainer/OptionsMenu/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -200
alignment = 1

[node name="MFX" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/MFX"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
text = "Music Effects"
horizontal_alignment = 1

[node name="MFX_volume" type="HSlider" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/MFX"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.75
allow_greater = true
allow_lesser = true

[node name="UFX" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/UFX"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
text = "Ui Effects"
horizontal_alignment = 1

[node name="UFX_volume" type="HSlider" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/UFX"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.75
allow_greater = true
allow_lesser = true

[node name="SFX" type="VBoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/SFX"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
text = "Sound Effects"
horizontal_alignment = 1

[node name="SFX_volume" type="HSlider" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/SFX"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.75
allow_greater = true
allow_lesser = true

[node name="Spacing" type="BoxContainer" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MenuContainer/OptionsMenu/HBoxContainer/Audio/VBoxContainer/Spacing"]
layout_mode = 2
theme = SubResource("Theme_c2wnw")
theme_override_font_sizes/font_size = 76
text = "Volume"
horizontal_alignment = 1

[node name="Win Button" type="Button" parent="."]
offset_right = 136.0
offset_bottom = 31.666668
text = "This button sucks"
script = SubResource("GDScript_qvaan")

[connection signal="pressed" from="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer/Resume" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuContainer/PauseMenu/VBoxContainer/Buttons/VBoxContainer/Quit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Win Button" to="Win Button" method="_on_pressed"]
